Increase z-index to avoid opacity issue

--- a/sass/misc/_header-characters.scss
+++ b/sass/misc/_header-characters.scss
@@ -11,6 +11,7 @@
     width: 60px;
     height: 60px;
     position: absolute;
+    z-index: 16;
     @media all and ( min-width: $screen-xs ) {
       width: 65px;
       height: 65px;
